[gd_scene load_steps=4 format=1]

[ext_resource path="res://addons/eco.fps.walker/walker_core.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]

radius = 0.8
height = 1.0

[sub_resource type="SphereShape" id=4]

radius = 0.3

[node name="npc" type="RigidBody"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = true
input/capture_on_drag = false
shape_count = 2
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.6, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 4 )
shapes/1/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 0.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = true
continuous_cd = false
contacts_reported = 8
contact_monitor = true
sleeping = false
can_sleep = false
axis_lock = 0
velocity/linear = Vector3( 0, 0, 0 )
velocity/angular = Vector3( 0, 0, 0 )
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"Script" }
body_radius = 0.8
body_height = 1
leg_length = 0.3
target = null
navigation = null

[node name="body" type="CollisionShape" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.6, 0 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="leg" type="CollisionShape" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 1

[node name="leg_ray" type="RayCast" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0 )
enabled = true
cast_to = Vector3( 0, -0.4, 0 )
layer_mask = 1
type_mask = 15

[node name="TestCube" type="TestCube" parent="leg_ray"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.01, 0, 0, 0, 0.3, 0, 0, 0, 0.01, 0, 0, 0 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[node name="target_ray" type="RayCast" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.89698, 0 )
enabled = true
cast_to = Vector3( 0, 0, -100 )
layer_mask = 1
type_mask = 15

[node name="ray_ground_right" type="RayCast" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -0.5 )
enabled = true
cast_to = Vector3( 1.2, -4, -2 )
layer_mask = 1
type_mask = 1

[node name="TestCube1" type="TestCube" parent="ray_ground_right"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.00968092, 0.501193, 0, -0.00224291, 1.73294, -0.00446012, -0.00111769, 0.863562, 0.00895027, -0.549539, -1.81622, -0.904611 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[node name="ray_ground_left" type="RayCast" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -0.5 )
enabled = true
cast_to = Vector3( -1.2, -4, -2 )
layer_mask = 1
type_mask = 1

[node name="TestCube2" type="TestCube" parent="ray_ground_left"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.00564067, -0.515572, -0.00784458, -0.00224291, 1.73294, -0.00446012, 0.00794684, 0.855055, 0.00430927, 0.532622, -1.81622, -0.904611 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0


